# hlpt

./: .gitignore  LICENSE  README.md  pyproject.toml  pyptoject.toml  requirements.txt  setup.cfg  setup.py
src/hlpt/: __init__.py  base.py  data.py  models.py  prelude.py  preprocess.py  util.py
src/hlpt/augments/: __init__.py  audio.py  audiofft.py  base.py  video.py
src/mlutils/: __init__.py
