[project]
name = "mlutils"
version = "0.1.0"
authors = [
  { name="Darin Chau", email="darinchauyf@gmail.com" },
]
description = "My machine learning utils for Google Colab"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
