[metadata]
name = hlpt
version = 0.1.0
author = Darin Chau
description = Some commonly used pytorch components with summary
long_description = file: README.md
keywords = torch
license = MIT
url = https://github.com/vert178/hlpt
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
packages = 
    hlpt
zip_safe = False
package_dir = 
    =src
python_requires = >=3.10
