[metadata]
name = mlutils
version = 0.1.0
author = Darin Chau
description = Some commonly used pytorch components with summary
long_description = file: README.md
keywords = torch
license = MIT
url = https://github.com/darinchau/mlutils
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
packages = 
    mlutils
zip_safe = False
package_dir = 
    =src
python_requires = >=3.10
